2007-03-08  Nicola Pero  <nicola.pero@meta-innovation.com>

	* GNUmakefile (SimpleWebKit_INCLUDE_DIRS): Variable removed.
	* Source/GNUmakefile (SimpleWebKit_INCLUDE_DIRS): Variable removed.
	* Sources/GNUmakefile (SimpleWebKit_HEADER_FILES): Added DOMCore.h